# ObjectDetection

./: CMakeLists.txt  CMakePresets.json  CameraCapture.cpp  ObjectDetection.h  PytorchExample.cpp  README.md  ShowImage.cpp
